# workspace

./: note
Python-2.7.12/: Makefile.pre.in
Python-2.7.12/Include/: Python.h  descrobject.h  dictobject.h  object.h  vectorobject.h
Python-2.7.12/Note/: class_call.rst  class_new.rst  closure.rst  descriptor.py  getattr.rst  instancemethod.py  misc.rst  peephole.py  type_call.rst
Python-2.7.12/Objects/: abstract.c  classobject.c  dictobject.c  object.c  typeobject.c  vectorobject.c
Python-2.7.12/PC/os2emx/: Makefile
Python-2.7.12/PC/os2vacpp/: makefile
Python-2.7.12/Python/: bltinmodule.c  ceval.c
SwitchVsComputedGoto/: cgoto.out  main.c  switch.out  switch_1000000.out
a/: .2.un~
elf/: 1  SimpleSection.c  SimpleSection.note
hash/: hash_demo.py
malloc/: brk.c  mmap  mmap.c  readme  sbrk
opengl/: CMakeLists.txt  build.bat  build.sh
opengl/common/: shader.h
opengl/res/model/: cube.blend
opengl/src/: shaders-using-object.cpp
opengl/vs_solution/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  HelloGL.vcxproj  HelloGL.vcxproj.filters  HelloOpenGL.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
opengl/vs_solution/Debug/: HelloGL.ilk
opengl/vs_solution/HelloGL.dir/Debug/HelloGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
opengl/vs_solution/Win32/Debug/ALL_BUILD/: ALL_BUILD.vcxprojResolveAssemblyReference.cache
opengl/vs_solution/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
statemachine/statemachine/: main.cpp  statemachine.cpp  statemachine.hpp
statemachine/statemachine.xcodeproj/: project.pbxproj
statemachine/statemachine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
statemachine/statemachine.xcodeproj/project.xcworkspace/xcuserdata/tristeen.xcuserdatad/: UserInterfaceState.xcuserstate
(+3 files in other folders)
